package model;

public enum EstadoCita {
    RESERVADA,
    CANCELADA,
    COMPLETADA
}
