package model;

public enum TipoUsuario {
    RECEPCIONISTA,
    MEDICO,
    PACIENTE
}
