package view;

import controller.AdministradorController;
import java.util.Scanner;

public class VistaAdministrador {
    AdministradorController ac;
    Scanner input;

    public VistaAdministrador(AdministradorController ac, Scanner input) {
        this.ac = ac;
        this.input = input;
    }

    public void mostrar() {
    }

    public void ocultar() {
    }

    private void eliminarUsuario() {
    }

    private void editarUsuario() {
    }

    private void listarUsuarios() {
    }

    private void listarConsultorios() {
    }

    private void registrarConsultorio() {
    }

    private void registrarRecepcionista() {
    }

    private void registrarMedico() {
    }
}