package view;

import controller.MedicoController;
import java.util.Scanner;

public class VistaMedico {
    MedicoController mc;
    Scanner input;

    public VistaMedico(MedicoController mc, Scanner input) {
        this.mc = mc;
        this.input = input;
    }

    public void mostrar(){
    }

    public void ocultar(){

    }

    private void listarCitas(){

    }
}