package view;

import controller.PacienteController;
import java.util.Scanner;

public class VistaPaciente {
    PacienteController pc;
    Scanner input;

    public VistaPaciente(PacienteController pc, Scanner input) {
        this.pc = pc;
        this.input = input;
    }

    public void mostrar() {
    }

    public void ocultar() {
    }

    private void listarCitas() {
    }

    private void reservarCita() {
    }
}