package view;

import controller.RecepcionistaController;
import java.util.Scanner;

public class VistaRecepcionista {
    RecepcionistaController rc;
    Scanner input;

    public VistaRecepcionista(RecepcionistaController rc, Scanner input) {
        this.rc = rc;
        this.input = input;
    }

    public void mostrar() {

    }

    public void ocultar() {

    }

    private void reservarCita() {

    }

    private void listarCitas() {

    }

    private void registrarPaciente() {

    }

    private void listarUsuarios() {

    }

}
